Add image inputs

--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
                     <option value="layout6">conf 6</option>
                 </select>
 
+                <!-- Dynamic controls (text input + file upload) will be inserted here -->
                 <div id="controls" class="controls"></div>
             </div>
 
+            <!-- The grid layout will be rendered here -->
             <div id="grid" class="grid"></div>
         </div>
     </div>
